@@ -7,8 +7,6 @@
   "files": [
     "dist/",
     "es5/",
-    "es5/lib/",
-    "es5/*.js",
     "examples/",
     "lib/",
     "AdvancedCCM.js",
@@ -52,8 +50,8 @@
   "dependencies": {
     "agentkeepalive": "^3.3.0",
     "detect-node": "^2.0.3",
-    "event-emitter": "^0.3.5",
     "faye-websocket": "^0.11.1",
+    "futoin-asyncevent": "^0.9.0",
     "lodash": "^4.17.4",
     "performance-now": "^2.1.0",
     "request": "^2.83.0"
