@@ -16,6 +16,8 @@
       </script>
       
       <script src="../node_modules/futoin-asyncsteps/dist/futoin-asyncsteps.js"></script>
+      <script src="../node_modules/futoin-asyncevent/dist/polyfill-asyncevent.js"></script>
+      <script src="../node_modules/futoin-asyncevent/dist/futoin-asyncevent.js"></script>
       <script src="../dist/futoin-invoker.js"></script>
       <script src="../dist/unittest.js"></script>
       <script src="../dist/spectooltest.js"></script>
